[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Networking/PublicLobbyData.gd" type="Script" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=5]

[node name="PublicLobbyData" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_bottom = 20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = -384.0
margin_right = -320.0
margin_bottom = 23.0
rect_min_size = Vector2( 64, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
margin_left = -305.888
margin_right = -177.888
margin_bottom = 23.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dangle"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
margin_left = -160.0
margin_right = -32.0
margin_bottom = 23.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABC1F"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersLabel" type="Label" parent="."]
margin_left = -16.0
margin_right = 112.0
margin_bottom = 23.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3/4"
clip_text = true

[node name="InfoLabel" type="Label" parent="."]
margin_left = 128.0
margin_right = 384.0
margin_bottom = 23.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Constructed - Tournament"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
